--- a/.gitignore
+++ b/.gitignore
@@ -7,15 +7,12 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-# Files
-.bolt
 node_modules
 dist
 dist-ssr
 *.local
-.env
 
-# Editor directories and iles
+# Editor directories and files
 .vscode/*
 !.vscode/extensions.json
 .idea
