--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "npm i && vite",
+    "dev": "vite",
     "build": "npm i && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
