--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "build": "npm build --prefix frontend",
-    "dev": "npm run dev --prefix frontend"
+    "build": "npm run build --prefix frontend",
+    "dev": "npm run dev --prefix frontend",
+    "start": "cross-env NODE_ENV=production node server.js --prefix backend"
   },
   "dependencies": {
     "accepts": "^1.3.8",
@@ -159,6 +160,7 @@
     "mime-types": "^2.1.35",
     "minimatch": "^3.1.2",
     "minipass": "^7.1.2",
+    "mongodb": "^6.15.0",
     "mongoose": "^8.13.1",
     "ms": "^2.1.3",
     "mz": "^2.7.0",
@@ -166,6 +168,7 @@
     "natural-compare": "^1.4.0",
     "negotiator": "^0.6.3",
     "node-releases": "^2.0.18",
+    "nodemon": "^3.1.9",
     "normalize-path": "^3.0.0",
     "normalize-range": "^0.1.2",
     "object-assign": "^4.1.1",
