--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
   },
   "license": "ISC",
   "author": "",
-  "type": "commonjs",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "build": "npm run build --prefix frontend",
     "dev": "npm run dev --prefix frontend",
-    "start": "cross-env NODE_ENV=production node server.js --prefix backend"
+    "start": "cd backend && node server.js"
   },
   "dependencies": {
     "accepts": "^1.3.8",
@@ -65,6 +65,7 @@
     "destroy": "^1.2.0",
     "didyoumean": "^1.2.2",
     "dlv": "^1.1.3",
+    "dotenv": "^16.4.7",
     "dunder-proto": "^1.0.1",
     "eastasianwidth": "^0.2.0",
     "ee-first": "^1.1.1",
