--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "build": "npm run build --prefix frontend",
+    "build": "cross-env NODE_ENV=production npm run build --prefix frontend",
     "dev": "npm run dev --prefix frontend",
-    "start": "cd backend && node server.js"
+    "start": "cross-env NODE_ENV=production node backend/server.js"
   },
   "dependencies": {
     "accepts": "^1.3.8",
