--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "build": "cross-env NODE_ENV=production npm run build --prefix frontend",
+    "build": "npm run build --prefix frontend",
     "dev": "npm run dev --prefix frontend",
     "start": "cross-env NODE_ENV=production node backend/server.js"
   },
