--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.3",
     "uuid": "^9.0.1",
-    "vite-react-typescript-starter": "file:"
+    "vite-react-typescript-starter": "file:",
+    "x-frame-bypass": "^1.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
