--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.8.4",
     "esbuild": "^0.25.2",
     "lucide-react": "^0.486.0",
     "react": "^18.3.1",
