--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,5 +35,6 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
     "vite": "^6.2.4"
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
