--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "convert-source-map": "^2.0.0",
     "cookie": "^0.7.1",
     "cookie-signature": "^1.0.6",
+    "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "cross-spawn": "^7.0.6",
     "cssesc": "^3.0.0",
@@ -210,6 +211,7 @@
     "react-refresh": "^0.14.2",
     "read-cache": "^1.0.0",
     "readdirp": "^3.6.0",
+    "request": "^2.88.2",
     "resolve": "^1.22.8",
     "resolve-from": "^4.0.0",
     "reusify": "^1.0.4",
