--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "scripts": {
     "build": "npm run build --prefix frontend",
     "dev": "npm run dev --prefix frontend",
-    "start": "cross-env NODE_ENV=production node backend/server.js"
+    "start": "cross-env NODE_ENV=production nodemon backend/server.js"
   },
   "dependencies": {
     "accepts": "^1.3.8",
