--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.3",
+    "react-toastify": "^11.0.5",
     "uuid": "^9.0.1",
     "vite-react-typescript-starter": "file:",
     "x-frame-bypass": "^1.0.2"
@@ -35,6 +36,5 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
     "vite": "^6.2.4"
-  },
-  "proxy": "http://localhost:5000"
+  }
 }
