--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "scripts": {
     "build": "npm run build --prefix frontend",
     "dev": "npm run dev --prefix frontend",
-    "start": "cross-env NODE_ENV=production nodemon backend/server.js"
+    "start": "cross-env NODE_ENV=production nodemon backend/server.js",
+    "test": "cross-env NODE_ENV=production && npm run build && npm run start"
   },
   "dependencies": {
     "accepts": "^1.3.8",
@@ -79,7 +80,6 @@
     "escalade": "^3.2.0",
     "escape-html": "^1.0.3",
     "escape-string-regexp": "^1.0.5",
-    "eslint": "^9.12.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc-fb9a90fa48-20240614",
     "eslint-plugin-react-refresh": "^0.4.12",
     "eslint-scope": "^8.1.0",
@@ -149,7 +149,6 @@
     "lodash.merge": "^4.6.2",
     "loose-envify": "^1.4.0",
     "lru-cache": "^5.1.1",
-    "lucide-react": "^0.477.0",
     "math-intrinsics": "^1.1.0",
     "media-typer": "^0.3.0",
     "merge-descriptors": "^1.0.3",
@@ -210,7 +209,6 @@
     "react-refresh": "^0.14.2",
     "read-cache": "^1.0.0",
     "readdirp": "^3.6.0",
-    "request": "^2.88.2",
     "resolve": "^1.22.8",
     "resolve-from": "^4.0.0",
     "reusify": "^1.0.4",
